--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -7,18 +7,26 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/simplelightbox@2.14.2/dist/simple-lightbox.min.css
+"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-    <script
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.9.0/simple-lightbox.min.js"
       integrity="sha512-d3VUxSAz6ET/1m4LI8NrqHb25ziUKeYQHHyGPvx2Q6yD8Tuw4MP0oRXXYkGKh/nylBy2+7I1LF/WaDyLoAz1ug=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    ></script> -->
+    <script src="
+    https://cdn.jsdelivr.net/npm/simplelightbox@2.14.2/dist/simple-lightbox.min.js
+    "></script>
     <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
